# Airflow-Pipeline-Local-GCS-BigQuery-Streamlit

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
__archives_iac/: README-IaC.md
__archives_iac/.github/workflows/: cd-terraform.yml  ci-build.yml
__archives_iac/infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
__archives_iac/workers/loader/: requirements.txt
_bq-small-corp-iac-pack/: Makefile
_bq-small-corp-iac-pack/workers/loader/: run.py
_input_data/: customers.csv  orders.csv
airflow/dags/: gcp_pipeline_dag.py
dbt/: dbt_project.yml  profiles.example.yml
dbt/models/staging/: staging_customers.sql
docker/: Dockerfile.streamlit  docker-compose.yml
modules/: __init__.py  status_manager.py  tab_dbt.py  tab_dw_modeling_bq.py  tab_export_project.py  tab_exports.py  tab_gcp_setup.py  tab_load_to_bq.py  tab_orchestration.py  tab_sql_transforms.py  tab_upload_to_gcs.py  tab_viz_streamlit.py
sql/: 01_dim_date.sql  02_scd2_dim_customer.sql
utils/: gcp_bq.py  gcp_io.py
workers/loader/: Dockerfile
workers/loader/utils/: gcp_bq.py  gcp_io.py
