[project]
name = "airflow-pipeline-local-gcs-bigquery-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "db-dtypes>=1.2.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-bigquery-storage>=2.25.0",
    "google-cloud-storage>=2.14.0",
    "graphviz>=0.20.3",
    "pandas>=1.5.0",
    "pandas-gbq>=0.22.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.28.0",
]
